Added guidance pages, content fixes

--- a/app/views/current/views/index.html
+++ b/app/views/current/views/index.html
@@ -52,19 +52,37 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="guidance/all-grants">
+          Rural grants
+        </a></td>
+      <td class="govuk-table__cell">Guidance page for rural grants</td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="guidance/small-grants">
+          Small grants
+        </a></td>
+      <td class="govuk-table__cell">Guidance page for small grants</td>
+    </tr>
+    <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="guidance/large-water">
           Water guidance
         </a></td>
-      <td class="govuk-table__cell">Guidance page for water grants</td>
+      <td class="govuk-table__cell">Guidance page for large water grants</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="guidance/large-slurry">
           Slurry guidance
         </a></td>
-      <td class="govuk-table__cell">Guidance page for water grants</td>
+      <td class="govuk-table__cell">Guidance page for large slurry grants</td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="task-list">
+      <td class="govuk-table__cell"><a href="views/water/sign-in">
+          Sign in
+        </a></td>
+      <td class="govuk-table__cell">Sign in page for the '{{serviceName}}' service</td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="views/water/task-list">
           Task list
         </a></td>
       <td class="govuk-table__cell">Task list page for the '{{serviceName}}' service</td>
