--- a/app/views/current/views/layouts/GUIDANCELINKS.html
+++ b/app/views/current/views/layouts/GUIDANCELINKS.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-Countryside Productivity Scheme
+Countryside Productivity Scheme - GOV.UK
 {% endblock %}
 
 {% block header %}
