--- a/app/views/current/views/layouts/GUIDANCESMALL.html
+++ b/app/views/current/views/layouts/GUIDANCESMALL.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-Large grants for water resource management projects - GOV.UK
+Small Countryside Productivity Grants - GOV.UK
 {% endblock %}
 
 {% block header %}
@@ -50,11 +50,13 @@ Large grants for water resource management projects - GOV.UK
         Guidance
       </p>
       <h1 class="gem-c-title__text gem-c-title__text--long">
-        Large grants for slurry equipment
+        Small Countryside Productivity Grants
       </h1>
     </div>
 
-    <p class="gem-c-lead-paragraph">These grants are to help businesses make more efficient use of slurry, manure and digestate.<br><br>Only apply if the estimated costs are over £87,500. Grants can cover up to 40% of the eligible costs. The minimum grant you can claim is £35,000 (40% of £87,500).</p>
+    <p class="gem-c-lead-paragraph ">
+      Find out about the grants available to help farmers, foresters and rural businesses. You can get up to £12,000 to help purchase specific equipment that improves farm productivity and efficiency.
+    </p>
 
   </div>
 </div>
