--- a/app/views/current/views/layouts/GUIDANCEWATER.html
+++ b/app/views/current/views/layouts/GUIDANCEWATER.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-Large grants for water resource management projects
+Large grants for water resource management projects - GOV.UK
 {% endblock %}
 
 {% block header %}
