--- a/app/views/current/views/water/current-irrigation.html
+++ b/app/views/current/views/water/current-irrigation.html
@@ -47,7 +47,7 @@
         <textarea class="govuk-textarea" id="irrigation-systems" name="irrigation-systems" rows="4" aria-describedby="irrigation-systems-hint">{{ data['irrigation-systems'] }}</textarea>
       </div>
 
-      <button class="govuk-button" data-module="govuk-button">Continue</button>
+      <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
 
 
