--- a/app/views/current/views/water/environment.html
+++ b/app/views/current/views/water/environment.html
@@ -23,7 +23,7 @@
           <textarea class="govuk-textarea" id="environment" name="environment" rows="8" aria-describedby="environment-hint">{{ data['environment'] }}</textarea>
         </div>
 
-        <button class="govuk-button" data-module="govuk-button">Continue</button>
+        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
       </form>
 
