--- a/app/views/current/views/water/new-business-condition.html
+++ b/app/views/current/views/water/new-business-condition.html
@@ -21,7 +21,7 @@
 
       <form class="form" action="applying" method="post">
 
-        <button class="govuk-button" data-module="govuk-button">Continue</button>
+        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
       </form>
 
