--- a/app/views/current/views/water/productivity.html
+++ b/app/views/current/views/water/productivity.html
@@ -23,7 +23,7 @@
           <textarea class="govuk-textarea" id="productivity" name="productivity" rows="8" aria-describedby="productivity-hint">{{ data['productivity'] }}</textarea>
         </div>
 
-        <button class="govuk-button" data-module="govuk-button">Continue</button>
+        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
       </form>
 
