--- a/app/views/current/views/water/proposed-irrigation.html
+++ b/app/views/current/views/water/proposed-irrigation.html
@@ -47,7 +47,7 @@
           <textarea class="govuk-textarea" id="improved-irrigation-systems" name="improved-irrigation-systems" rows="4" aria-describedby="improved-irrigation-systems-hint">{{ data['improved-irrigation-systems'] }}</textarea>
         </div>
 
-        <button class="govuk-button" data-module="govuk-button">Continue</button>
+        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
       </form>
 
