--- a/app/views/current/views/water/sign-in.html
+++ b/app/views/current/views/water/sign-in.html
@@ -11,9 +11,9 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <form class="form" action="water/start" method="post">
+    <form class="form" action="#" method="post">
       <div class="govuk-form-group">
-        <h1 class="govuk-heading-xl">Sign in</h1>
+        <h1 class="govuk-heading-xl">Sign in to Rural Payments</h1>
         <div class="govuk-form-group">
           <label class="govuk-label" for="CRN">
             Customer reference number (CRN)
@@ -32,9 +32,11 @@
         </div>
       </div>
       <button class="govuk-button" data-module="govuk-button">Sign in</button>
+      <p><a href="#">Create sign in details</a></p>
+      <h2 class="govuk-heading-m">Problems signing in</h2>
       <div>
           <p>Forgotten your password - <a href="/customer-account/reset-password/send-code">create a new one here</a>.</p>
-          <p>Started creating a new password and received the security code by email - <a href="/customer-account/reset-password/enter-details-code">enter it here</a></p>
+          <p>Started creating a new password and received the security code by email - <a href="/customer-account/reset-password/enter-details-code">enter it here</a>.</p>
           <p>Lost your customer reference number (CRN), call 03000 200 301.</p>
       </div>
     </form>
