--- a/app/views/current/views/welcome.html
+++ b/app/views/current/views/welcome.html
@@ -10,7 +10,7 @@
     Welcome
   </h1>
   <p class="govuk-body-l">
-    <a href="sign-in">Begin</a>
+    <a href="start">Begin</a>
   </p>
 
 {% endblock %}
