--- a/app/views/current/views/layouts/GUIDANCEALL.html
+++ b/app/views/current/views/layouts/GUIDANCEALL.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-Large grants for water resource management projects - GOV.UK
+Rural grants and payments - GOV.UK
 {% endblock %}
 
 {% block header %}
@@ -31,7 +31,7 @@ Large grants for water resource management projects - GOV.UK
       </li>
       <li class="govuk-breadcrumbs__list-item" aria-current="false">
         <a data-track-category="breadcrumbClicked" data-track-action="2" data-track-label="#" data-track-options="{}" class="govuk-breadcrumbs__link" aria-current="false"
-          href="#">Rural grants and payments </a>
+          href="#">Rural grants and payments</a>
       </li>
     </ol>
   </div>
@@ -47,19 +47,30 @@ Large grants for water resource management projects - GOV.UK
 
     <div class="gem-c-title govuk-x!-margin-top-8 govuk-!-margin-bottom-8">
       <p class="gem-c-title__context">
-        Guidance
+        Farming and food grants and payments
       </p>
-      <h1 class="gem-c-title__text gem-c-title__text--long">
-        Large grants for slurry equipment
+      <h1 class="gem-c-title__text">
+        Rural grants and payments
       </h1>
     </div>
-
-    <p class="gem-c-lead-paragraph">These grants are to help businesses make more efficient use of slurry, manure and digestate.<br><br>Only apply if the estimated costs are over £87,500. Grants can cover up to 40% of the eligible costs. The minimum grant you can claim is £35,000 (40% of £87,500).</p>
 
   </div>
 </div>
 
-<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds metadata-column">
+
+<div class="gem-c-metadata" data-module="gem-toggle">
+  <dl data-module="track-click">
+      <dt class="gem-c-metadata__term">From:</dt>
+      <dd class="gem-c-metadata__definition">
+          <a href="/government/organisations/rural-payments-agency">Rural Payments Agency</a>, <a href="/government/organisations/department-for-environment-food-rural-affairs">Department for Environment, Food &amp; Rural Affairs</a>, <a href="/government/organisations/natural-england">Natural England</a>, <a href="/government/organisations/environment-agency">Environment Agency</a>, <a href="/government/organisations/forestry-commission">Forestry Commission</a>, <a href="/government/organisations/rural-development-programme-for-england-network">Rural Development Programme for England Network</a>, and <a href="/government/organisations/animal-and-plant-health-agency">Animal and Plant Health Agency</a>
+
+      </dd>
+  </dl>
+</div>
+</div>
+
+<!--<div class="govuk-grid-row">
   <div class="metadata-logo-wrapper">
     <div class="govuk-grid-column-two-thirds metadata-column">
       <div class="app-c-publisher-metadata" lang="en">
@@ -87,7 +98,7 @@ Large grants for water resource management projects - GOV.UK
 
     </div>
   </div>
-</div>
+</div>-->
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -113,62 +124,6 @@ Large grants for water resource management projects - GOV.UK
           Contents
         </a>
       </div>
-    </div>
-
-  </div>
-
-  <div class="govuk-grid-column-one-third">
-
-    <div class="gem-c-contextual-sidebar">
-
-      <div class="gem-c-related-navigation">
-
-        <h2 class="gem-c-related-navigation__main-heading" data-track-count="sidebarRelatedItemSection">
-          Related content
-        </h2>
-
-        <nav role="navigation" class="gem-c-related-navigation__nav-section" aria-labelledby="related-nav-related_items-2dae1b11" data-module="gem-toggle">
-
-          <ul class="gem-c-related-navigation__link-list" data-module="track-click">
-
-            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.1 Related content" data-track-label="#"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Rural Development Programme for England: LEADER funding&quot;}" href="#">Rural
-                Development Programme for England: LEADER funding</a></li>
-            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.2 Related content" data-track-label="#"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Small Grant scheme - livestock handling items in short supply&quot;}"
-                href="#">Small Grant scheme - livestock handling items in short supply</a></li>
-            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.3 Related content" data-track-label="#"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Check if you're eligible for the coronavirus Small Business Grant Fund&quot;}"
-                href="#">Check if you're eligible for the coronavirus Small Business Grant Fund</a></li>
-            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.4 Related content" data-track-label="#"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Water Environment Grant (WEG) handbooks: guidance and forms&quot;}"
-                href="#">Water Environment Grant (WEG) handbooks: guidance and forms</a></li>
-            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar gem-c-related-navigation__section-link--inline  gem-c-related-navigation__section-link--other"
-                data-track-category="relatedLinkClicked" data-track-action="1.5 Related content" data-track-label="#"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;RDPE Growth Programme&quot;}" href="#">RDPE Growth Programme</a></li>
-
-          </ul>
-        </nav>
-
-        <nav role="navigation" class="gem-c-related-navigation__nav-section" aria-labelledby="related-nav-collections-2dae1b11" data-module="gem-toggle">
-
-          <h3 id="related-nav-collections-2dae1b11" class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--sidebar" data-track-count="sidebarRelatedItemSection">Collection</h3>
-
-          <ul class="gem-c-related-navigation__link-list" data-module="track-click">
-
-            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar" data-track-category="relatedLinkClicked" data-track-action="2.1 Collection"
-                data-track-label="#" data-track-options="{&quot;dimension28&quot;:&quot;1&quot;,&quot;dimension29&quot;:&quot;Rural payments and grants&quot;}"
-                href="#">Rural payments and grants</a></li>
-
-          </ul>
-        </nav>
-
-      </div>
-
     </div>
 
   </div>
