--- a/app/views/current/views/water/business.html
+++ b/app/views/current/views/water/business.html
@@ -40,7 +40,7 @@
           <input class="govuk-input govuk-input--width-10" id="turnover" name="turnover" type="text" spellcheck="false" aria-describedby="turnover-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['turnover'] }}">
         </div>
 
-        <button class="govuk-button" data-module="govuk-button">Continue</button>
+        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
       </form>
 
