--- a/app/views/current/views/water/new-irrigation.html
+++ b/app/views/current/views/water/new-irrigation.html
@@ -47,7 +47,7 @@
           <textarea class="govuk-textarea" id="new-irrigation-systems" name="new-irrigation-systems" rows="4" aria-describedby="new-irrigation-systems-hint">{{ data['new-irrigation-systems'] }}</textarea>
         </div>
 
-        <button class="govuk-button" data-module="govuk-button">Continue</button>
+        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
 
 
