--- a/app/views/current/views/water/preferred-contact.html
+++ b/app/views/current/views/water/preferred-contact.html
@@ -39,7 +39,7 @@
           </fieldset>
         </div>
 
-        <button class="govuk-button" data-module="govuk-button">Continue</button>
+        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
       </form>
 
