--- a/app/views/current/views/water/project.html
+++ b/app/views/current/views/water/project.html
@@ -44,7 +44,7 @@
           </div>
         </div>
 
-        <button class="govuk-button" data-module="govuk-button">Continue</button>
+        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
       </form>
 
