--- a/app/views/current/views/index.html
+++ b/app/views/current/views/index.html
@@ -64,10 +64,10 @@
       <td class="govuk-table__cell">Guidance page for water grants</td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="task-list">
+      <td class="govuk-table__cell"><a href="water/task-list">
           Task list
         </a></td>
-      <td class="govuk-table__cell">Task list page for the '{{serviceName}}' service</td>
+      <td class="govuk-table__cell">Task list page for the water service</td>
     </tr>
 
   </tbody>
