--- a/public/sass/_grants.scss
+++ b/public/sass/_grants.scss
@@ -3,8 +3,8 @@
 
 /* Grants styles */
 
-@media (min-width: 40.0625em) {
-  .app-task-list__items {
-    padding-left: 0;
-  }
-}
+// @media (min-width: 40.0625em) {
+//   .app-task-list__items {
+//     padding-left: 0;
+//   }
+// }
