Task list page for water ready for first look through
CYA pages to follow

--- a/app/views/current/views/water/task-list.html
+++ b/app/views/current/views/water/task-list.html
@@ -54,7 +54,7 @@
                   Provide project details and benefits
                 </a>
                   {% else %}
-                <a href="project-items" aria-describedby="s02-status">
+                <a href="project" aria-describedby="s02-status">
                   Provide project details and benefits
                 </a>
                   {% endif %}
