--- a/app/views/current/views/water/check-answers-project-details-and-benefits.html
+++ b/app/views/current/views/water/check-answers-project-details-and-benefits.html
@@ -5,7 +5,7 @@ Check your answers
 {% endblock %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="environment">Back</a>
+<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
