fix to welcome page

--- a/app/views/current/views/index.html
+++ b/app/views/current/views/index.html
@@ -25,16 +25,16 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="welcome">
+      <td class="govuk-table__cell"><a href="water/welcome">
           Water resource management EoI
         </a></td>
-      <td class="govuk-table__cell">Eligibilty and expression of interest</td>
+      <td class="govuk-table__cell">Eligibility and expression of interest</td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="#">
+      <td class="govuk-table__cell"><a href="slurry/welcome">
           Slurry management EoI
         </a></td>
-      <td class="govuk-table__cell">Eligibilty and expression of interest</td>
+      <td class="govuk-table__cell">Eligibility and expression of interest</td>
     </tr>
   </tbody>
 </table>
