--- a/app/views/current/views/water/welcome.html
+++ b/app/views/current/views/water/welcome.html
@@ -1,4 +1,4 @@
-{% extends "./layout_unbranded.html" %}
+{% extends "../layout_unbranded.html" %}
 
 {% block pageTitle %}
   Welcome
@@ -10,7 +10,7 @@
     Welcome
   </h1>
   <p class="govuk-body-l">
-    <a href="start">Begin</a>
+    <a href="../guidance/all-grants">Begin</a>
   </p>
 
 {% endblock %}
