added save and return option

--- a/app/views/current/views/water/check-answers-contact-details.html
+++ b/app/views/current/views/water/check-answers-contact-details.html
@@ -219,7 +219,7 @@ Check your answers
       <input type="hidden" name="answers-checked" value="true">
 
       <button class="govuk-button govuk-!-margin-top-4" data-module="govuk-button">
-        Save and continue
+        Continue
       </button>
 
     </form>
