--- a/app/views/current/views/water/applicant-details.html
+++ b/app/views/current/views/water/applicant-details.html
@@ -64,7 +64,13 @@
             </div>
           </div>
 
-        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+          <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
+            Save and continue
+          </button>
+
+          <button class="govuk-button govuk-button--secondary" type="button" data-module="govuk-button">
+            Save and return
+          </button>
 
       </form>
 
