--- a/app/views/current/views/water/check-answers-check-you-can-apply.html
+++ b/app/views/current/views/water/check-answers-check-you-can-apply.html
@@ -261,7 +261,7 @@
       <input type="hidden" name="answers-checked" value="true">
 
       <button class="govuk-button govuk-!-margin-top-4" data-module="govuk-button">
-        Save and continue
+        Continue
       </button>
 
     </form>
