--- a/app/views/current/views/water/current-irrigation.html
+++ b/app/views/current/views/water/current-irrigation.html
@@ -47,9 +47,13 @@
         <textarea class="govuk-textarea" id="irrigation-systems" name="irrigation-systems" rows="4" aria-describedby="irrigation-systems-hint">{{ data['irrigation-systems'] }}</textarea>
       </div>
 
-      <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+      <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
+        Save and continue
+      </button>
 
-
+      <button class="govuk-button govuk-button--secondary" type="button" data-module="govuk-button">
+        Save and return
+      </button>
 
     </form>
 
