--- a/app/views/current/views/water/new-irrigation.html
+++ b/app/views/current/views/water/new-irrigation.html
@@ -47,9 +47,13 @@
           <textarea class="govuk-textarea" id="new-irrigation-systems" name="new-irrigation-systems" rows="4" aria-describedby="new-irrigation-systems-hint">{{ data['new-irrigation-systems'] }}</textarea>
         </div>
 
-        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
+          Save and continue
+        </button>
 
-
+        <button class="govuk-button govuk-button--secondary" type="button" data-module="govuk-button">
+          Save and return
+        </button>
 
       </form>
 
