--- a/app/views/current/views/water/project.html
+++ b/app/views/current/views/water/project.html
@@ -44,9 +44,17 @@
           </div>
         </div>
 
-        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
+          Save and continue
+        </button>
 
-      </form>
+        <button class="govuk-button govuk-button--secondary" type="button" data-module="govuk-button">
+          Save and return
+        </button>
+
+        </form>
+
+
 
     </div>
   </div>
