--- a/app/views/current/views/water/abstraction-licence-fail.html
+++ b/app/views/current/views/water/abstraction-licence-fail.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="abstraction-licence">Back</a>
+  <a class="govuk-back-link" href="abstraction-progress">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -17,7 +17,7 @@
         You cannot apply for a large countryside productivity grant
       </h1>
 
-      <p>Due to the time needed to obtain an abstraction licence, only projects that have already been granted an abstraction licence are eligible to apply.</p>
+      <p>Due to the time needed to obtain an abstraction licence, only projects that have already been granted an abstraction licence or are likely to get one in the next six months are eligible to apply.</p>
 
     </div>
   </div>
