--- a/app/views/current/views/water/check-answers-check-you-can-apply.html
+++ b/app/views/current/views/water/check-answers-check-you-can-apply.html
@@ -226,6 +226,21 @@
         </dd>
       </div>
       {% endif %}
+      {% if data['abstraction-licence'] == "no" %}
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
+          Abstraction licence to be granted in next six months
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <p class="govuk-body">{{ data['abstraction-progress'] | capitalize }}</p>
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="abstraction-licence">
+            Change<span class="govuk-visually-hidden"> abstraction licence to be granted in next six months</span>
+          </a>
+        </dd>
+      </div>
+      {% endif %}
       {% if data['abstraction-variation'] == "yes" %}
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
@@ -249,12 +264,35 @@
     </div>
     {% endif %}
 
+    {% if data['planning-required'] == "not sure" %}
+    <div class="govuk-inset-text">
+        You will need to check if you need and secure planning permission prior to submitting a full application.
+    </div>
+    {% endif %}
+
+    {% if (data['planning-permission'] == "no") and (data['planning-progress'] == "not sure") %}
+    <div class="govuk-inset-text">
+        You will need to secure planning permission prior to submitting a full application.
+    </div>
+    {% endif %}
+
+    {% if data['abstraction-required'] == "not sure" %}
+    <div class="govuk-inset-text">
+        You will need to check if you need and secure an abstraction licence prior to submitting a full application.
+    </div>
+    {% endif %}
+
+    {% if (data['abstraction-licence'] == "no") and (data['abstraction-progress'] == "not sure") %}
+    <div class="govuk-inset-text">
+        You will need to secure an abstraction licence prior to submitting a full application.
+    </div>
+    {% endif %}
+
     {% if (data['abstraction-licence'] == "yes") and (data['abstraction-variation'] == "yes") %}
     <div class="govuk-inset-text">
         You will need to secure a variation to your abstraction licence prior to submitting a full application.
     </div>
     {% endif %}
-
 
     <form action="task-list" method="post" novalidate>
 
