changes to content

--- a/app/views/current/views/guidance/large-slurry.html
+++ b/app/views/current/views/guidance/large-slurry.html
@@ -17,6 +17,8 @@
 
 <p>Livestock, dairy, arable and horticultural farmers and also new businesses.</p>
 
+<p>Only apply if the estimated costs are over £87,500. Grants can cover up to 40% of the eligible costs. The minimum grant you can claim is £35,000 (40% of £87,500).</p>
+
 <h2 id="what-is-the-grant-for">What is the grant for</h2>
 
 <p>It can pay up to 40% of the costs for:</p>
