--- a/app/views/current/views/guidance/large-water.html
+++ b/app/views/current/views/guidance/large-water.html
@@ -17,6 +17,8 @@
 
 <p>You can apply if you have an arable or horticultural business that grows, or intends to grow, irrigated crops for the food industry. New businesses can also apply.</p>
 
+<p>Only apply if the estimated project costs are over £87,500. Grants can cover up to 40% of the eligible costs of a project. The minimum grant you can claim is £35,000 (40% of £87,500).</p>
+
 <h2 id="what-is-the-grant-for">What is the grant for</h2>
 
 <p>It can pay up to 40% of the costs for:</p>
