--- a/app/views/current/views/layouts/GUIDANCESLURRY.html
+++ b/app/views/current/views/layouts/GUIDANCESLURRY.html
@@ -54,7 +54,7 @@ Large grants for water resource management projects - GOV.UK
       </h1>
     </div>
 
-    <p class="gem-c-lead-paragraph">These grants are to help businesses make more efficient use of slurry, manure and digestate.<br><br>Only apply if the estimated costs are over £87,500. Grants can cover up to 40% of the eligible costs. The minimum grant you can claim is £35,000 (40% of £87,500).</p>
+    <p class="gem-c-lead-paragraph">These grants are to help businesses make more efficient use of slurry, manure and digestate.</p>
 
   </div>
 </div>
@@ -133,23 +133,11 @@ Large grants for water resource management projects - GOV.UK
 
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
                 data-track-action="1.1 Related content" data-track-label="#"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Rural Development Programme for England: LEADER funding&quot;}" href="#">Rural
-                Development Programme for England: LEADER funding</a></li>
+                data-track-options="{}" href="large-water">Large grants for water resource management projects</a></li>
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
                 data-track-action="1.2 Related content" data-track-label="#"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Small Grant scheme - livestock handling items in short supply&quot;}"
-                href="#">Small Grant scheme - livestock handling items in short supply</a></li>
-            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.3 Related content" data-track-label="#"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Check if you're eligible for the coronavirus Small Business Grant Fund&quot;}"
-                href="#">Check if you're eligible for the coronavirus Small Business Grant Fund</a></li>
-            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
-                data-track-action="1.4 Related content" data-track-label="#"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;Water Environment Grant (WEG) handbooks: guidance and forms&quot;}"
-                href="#">Water Environment Grant (WEG) handbooks: guidance and forms</a></li>
-            <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar gem-c-related-navigation__section-link--inline  gem-c-related-navigation__section-link--other"
-                data-track-category="relatedLinkClicked" data-track-action="1.5 Related content" data-track-label="#"
-                data-track-options="{&quot;dimension28&quot;:&quot;5&quot;,&quot;dimension29&quot;:&quot;RDPE Growth Programme&quot;}" href="#">RDPE Growth Programme</a></li>
+                data-track-options="{}"
+                href="small-grants">Small grants for equipment to improve productivity</a></li>
 
           </ul>
         </nav>
@@ -162,7 +150,7 @@ Large grants for water resource management projects - GOV.UK
 
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar" data-track-category="relatedLinkClicked" data-track-action="2.1 Collection"
                 data-track-label="#" data-track-options="{&quot;dimension28&quot;:&quot;1&quot;,&quot;dimension29&quot;:&quot;Rural payments and grants&quot;}"
-                href="#">Rural payments and grants</a></li>
+                href="all-grants">Rural payments and grants</a></li>
 
           </ul>
         </nav>
@@ -180,9 +168,9 @@ Large grants for water resource management projects - GOV.UK
 
         <div class="gem-c-related-navigation">
 
-          <nav role="navigation" class="gem-c-related-navigation__nav-section" aria-labelledby="related-nav-topics-0e73d175" data-module="gem-toggle">
+          <nav role="navigation" class="gem-c-related-navigation__nav-section govuk-!-padding-top-4" aria-labelledby="related-nav-topics-0e73d175" data-module="gem-toggle">
 
-            <h2 id="related-nav-topics-0e73d175" class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer" data-track-count="footerRelatedItemSection">Explore the topic</h2>
+            <span id="related-nav-topics-0e73d175" class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer" data-track-count="footerRelatedItemSection">Explore the topic</span>
 
             <ul class="gem-c-related-navigation__link-list" data-module="track-click">
 
