--- a/app/views/current/views/layouts/GUIDANCESMALL.html
+++ b/app/views/current/views/layouts/GUIDANCESMALL.html
@@ -182,9 +182,9 @@ Small Countryside Productivity Grants - GOV.UK
 
         <div class="gem-c-related-navigation">
 
-          <nav role="navigation" class="gem-c-related-navigation__nav-section" aria-labelledby="related-nav-topics-0e73d175" data-module="gem-toggle">
+          <nav role="navigation" class="gem-c-related-navigation__nav-section govuk-!-padding-top-4" aria-labelledby="related-nav-topics-0e73d175" data-module="gem-toggle">
 
-            <h2 id="related-nav-topics-0e73d175" class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer" data-track-count="footerRelatedItemSection">Explore the topic</h2>
+            <span id="related-nav-topics-0e73d175" class="gem-c-related-navigation__sub-heading gem-c-related-navigation__sub-heading--footer" data-track-count="footerRelatedItemSection">Explore the topic</span>
 
             <ul class="gem-c-related-navigation__link-list" data-module="track-click">
 
