--- a/app/views/current/views/water/abstraction-variation-condition.html
+++ b/app/views/current/views/water/abstraction-variation-condition.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You may be eligible for a large countryside productivity grant
+  You may not be able to apply for a large grant from this scheme
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You may be eligible for a large countryside productivity grant
+        You may not be able to apply for a large grant from this scheme
       </h1>
 
       <p>The project would need to secure a variation to the current abstraction licence prior to submitting a full application.</p>
