--- a/app/views/current/views/water/new-business-condition.html
+++ b/app/views/current/views/water/new-business-condition.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You cannot apply for a large countryside productivity grant
+  You may not be able to apply for a large grant from this scheme
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You may be eligible for a large countryside productivity grant
+        You may not be able to apply for a large grant from this scheme
       </h1>
 
       <p>As a new business, to be considered eligible for a large countryside productivity grant scheme, you will need to provide additional evidence of your finances in your full application.</p>
