--- a/app/views/current/views/water/planning-required-condition.html
+++ b/app/views/current/views/water/planning-required-condition.html
@@ -17,7 +17,7 @@
         You may be able to apply for a large countryside productivity grant
       </h1>
 
-      <p>Check with your local planning authority</p>
+      <p>Check with your local planning authority.</p>
 
       <p>Find out if you need planning permission for your project and start the process as soon as possible. Planning applications can take years.</p>
 
