--- a/app/views/current/views/water/project-cost-fail.html
+++ b/app/views/current/views/water/project-cost-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You cannot apply for a large countryside productivity grant
+  You cannot apply for a large grant from this scheme
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You cannot apply for a large countryside productivity grant
+        You cannot apply for a large grant from this scheme
       </h1>
 
       <p>To be eligible, the funding sought (40% of your total project costs) must be greater than £35,000.</p>
