--- a/app/views/current/views/water/project-items.html
+++ b/app/views/current/views/water/project-items.html
@@ -33,7 +33,7 @@
                   Water meter
                 </label>
                 <div id="project-item-hint" class="govuk-hint govuk-checkboxes__hint">
-                  You must have a water meter or be able to use an existing meter for this project.
+                  You must have a water meter or be able to use an existing meter for this project to get a grant.
                 </div>
               </div>
               <h2 class="govuk-heading-m govuk-!-margin-top-6">Reservoir construction and infrastructure</h2>
@@ -117,7 +117,7 @@
                   Trickle
                 </label>
               </div>
-              <h2 class="govuk-heading-m govuk-!-margin-top-6">Computer software</h2>
+              <h2 class="govuk-heading-m govuk-!-margin-top-6">Technology</h2>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="project-items-15" name="project-items" type="checkbox" value="computer software" {{ checked("project-items", "computer software") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="project-items-15">
