--- a/app/views/current/views/water/project-start.html
+++ b/app/views/current/views/water/project-start.html
@@ -50,6 +50,7 @@ Have you already started work on the project?
 
           <p>You can:</p>
           <ul class="govuk-list govuk-list--bullet">
+            <li>start gathering quotes from suppliers and apply for planning permission</li>
             <li>start construction to retain planning, like putting in foundations and hardcore</li>
             <li>complete works that are not included in the estimated project costs</li>
           </ul>
