--- a/app/views/current/views/water/abstraction-licence-fail.html
+++ b/app/views/current/views/water/abstraction-licence-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You cannot apply for a large countryside productivity grant
+  You cannot apply for a large grant from this scheme
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You cannot apply for a large countryside productivity grant
+        You cannot apply for a large grant from this scheme
       </h1>
 
       <p>Due to the time needed to obtain an abstraction licence, only projects that have already been granted an abstraction licence or are likely to get one in the next six months are eligible to apply.</p>
