--- a/app/views/current/views/water/check-answers-contact-details.html
+++ b/app/views/current/views/water/check-answers-contact-details.html
@@ -74,7 +74,7 @@ Check your answers
 
     {% if data['new-business'] == "no" %}
     <div class="govuk-inset-text">
-        Additional financial evidence is required for all new businesses in the full application.
+        You will need to provide additional financial evidence when you make a full application.
     </div>
     {% endif %}
 
