--- a/app/views/current/views/water/legal-status-fail.html
+++ b/app/views/current/views/water/legal-status-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You cannot apply for a large countryside productivity grant
+  You cannot apply for a large grant from this scheme
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You cannot apply for a large countryside productivity grant
+        You cannot apply for a large grant from this scheme
       </h1>
 
       <p class="govuk-body">This is only open to a business with a legal status of:</p>
