--- a/app/views/current/views/water/public-money.html
+++ b/app/views/current/views/water/public-money.html
@@ -24,8 +24,8 @@ Meeting the remaining project costs
               Will you use any public money to fund the remaining project costs of £{{ remainingCosts | toFixed(2) | commafy }}?
             </h1>
           </legend>
-          <div id="farming-type-hint" class="govuk-hint">
-            Public money is any other capital grant funding. It is not funds from the Basic Payment Scheme or other stewardship schemes.
+          <div id="public-money-hint" class="govuk-hint">
+            Public money is any other capital grant funding from government or local authorities. It is not funds from the Basic Payment Scheme or other stewardship schemes.
           </div>
           <div class="govuk-radios govuk-radios--inline">
             <div class="govuk-radios__item">
