updated all grants page

--- a/app/views/current/views/guidance/all-grants.html
+++ b/app/views/current/views/guidance/all-grants.html
@@ -5,50 +5,45 @@
 
 <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
 
-  <p><a href="https://www.gov.uk/claim-rural-payments">Make or update a rural payments claim</a><br>
-  Apply for rural grants and payments or update your details</p>
+<h2 id="payments">Payments</h2>
+<p><a href="https://www.gov.uk/claim-rural-payments">Make or update a rural payments claim</a><br>
+Use this to apply or update your details</p>
 
-  <p><a href="https://www.gov.uk/government/collections/basic-payment-scheme">Basic Payment Scheme</a><br>
-  For farmers with at least 5 hectares of land.</p>
+<h2 id="available-schemes">Available schemes</h2>
+<p><a href="https://www.gov.uk/government/collections/basic-payment-scheme">Basic Payment Scheme</a><br>
+For farmers with at least 5 hectares of land.</p>
 
-  <p><a href="https://www.gov.uk/government/collections/countryside-stewardship-get-paid-for-environmental-land-management">Countryside Stewardship</a><br>
-  Funding for farmers, woodland owners, foresters and land managers to help them look after and improve the environment.</p>
+<p><a href="https://www.gov.uk/government/collections/countryside-stewardship-get-paid-for-environmental-land-management">Countryside Stewardship</a><br>
+Funding for farmers, woodland owners, foresters and land managers to help them look after and improve the environment.</p>
 
-  <p><a href="https://www.gov.uk/government/collections/environmental-stewardship-guidance-and-forms-for-existing-agreement-holders">Environmental Stewardship</a><br>
-  Funding for farmers and land managers who manage their land in a way that protects and helps the environment and wildlife.</p>
+<p><a href="https://www.gov.uk/government/collections/environmental-stewardship-guidance-and-forms-for-existing-agreement-holders">Environmental Stewardship</a><br>
+Funding for farmers and land managers who manage their land in a way that protects and helps the environment and wildlife.</p>
 
-  <p><a href="#">Small grants for equipment to improve productivity</a><br>
-  Up to £12,000 to help farmers buy specific equipment.</p>
+<p><a href="#">Small grants for equipment to improve productivity</a><br>
+Up to £12,000 to help farmers buy specific equipment.</p>
 
-  <p><a href="large-water">Large grants for water resource management projects</a><br>
-  Up to £1million towards reservoirs and irrigation projects.</p>
+<p><a href="#">Large grants for water resource management projects</a><br>
+Up to £1 million towards reservoirs and irrigation projects.</p>
 
-  <p><a href="large-slurry">Large grants for slurry equipment</a><br>
-  Up to £1million towards specific equipment that makes more efficient use of slurry, manure and digestate</p>
+<p><a href="#">Large grants for slurry equipment</a><br>
+Up to £1 million towards specific equipment that makes more efficient use of slurry, manure and digestate.</p>
 
-  <p><a href="https://www.gov.uk/guidance/england-coast-path-establishment-fund-ecpef">England Coast Path Establishment Fund (ECPEF)</a><br>
-  Grants to prepare areas for public use for land owners, managers, and access authorities</p>
+<p><a href="https://www.gov.uk/government/publications/rdpe-growth-programme">RDPE Growth Programme</a><br>
+Grants for projects that create jobs and growth in the rural economy.</p>
 
-  <p><a href="https://www.gov.uk/government/publications/farming-ammonia-reduction-grant-scheme-claim-form-and-offer-terms">Farming Ammonia Reduction Grant Scheme</a><br>
-  To help farmers install slurry store and lagoon covers.</p>
+<h2 id="closed-for-applications">Closed for applications</h2>
 
-  <p><a href="https://www.gov.uk/government/publications/rdpe-growth-programme">RDPE Growth Programme</a><br>
-  Grants for projects that create jobs and growth in the rural economy.</p>
+<p><a href="https://www.gov.uk/guidance/england-coast-path-establishment-fund-ecpef">England Coast Path Establishment Fund (ECPEF)</a><br>
+Grants to prepare areas for public use for land owners, managers, and access authorities</p>
 
-  <p><a href="https://www.gov.uk/guidance/rural-development-programme-for-england-leader-funding">RDPE LEADER funding</a><br>
-  Localised funding for projects that create jobs and benefit the rural economy</p>
+<p><a href="https://www.gov.uk/government/publications/farming-ammonia-reduction-grant-scheme-claim-form-and-offer-terms">Farming Ammonia Reduction Grant Scheme</a><br>
+To help farmers install slurry store and lagoon covers.</p>
 
-  <p><a href="https://www.gov.uk/government/publications/water-environment-grant-weg-handbooks-guidance-and-forms">Water Environment Grant (WEG)</a><br>
-  To help organisations and land managers improve the water environment</p>
+<p><a href="https://www.gov.uk/guidance/rural-development-programme-for-england-leader-funding">RDPE LEADER funding</a><br>
+Localised funding for projects that create jobs and benefit the rural economy</p>
 
-  <p><a href="https://www.gov.uk/government/collections/cross-compliance">Cross compliance</a><br>
-  Rules for farmers or land managers who claim rural payments</p>
+<p><a href="https://www.gov.uk/government/publications/water-environment-grant-weg-handbooks-guidance-and-forms">Water Environment Grant (WEG)</a><br>
+To help organisations and land managers improve the water environment</p>
 
-  <p><a href="#">New farmers</a><br>
-  New schemes available in 2021</p>
-
-  <p><a href="https://www.gov.uk/government/groups/farming-advice-service">Farming Advice service</a><br>
-  Get advice and support from experts</p>
-
-  </div>
+</div>
 {% endblock %}
